--- a/eclass/templates/common/base.html
+++ b/eclass/templates/common/base.html
@@ -3,22 +3,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "plugins/bootstrap/css/bootstrap.min.css" %}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="{% static "libs/Font-Awesome/css/font-awesome.min.css" %}">
+    <link rel="stylesheet" href="{% static "plugins/Font-Awesome/css/font-awesome.min.css" %}">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="{% static "libs/ionicons-2.0.1/css/ionicons.min.css" %}">
+    <link rel="stylesheet" href="{% static "plugins/ionicons-2.0.1/css/ionicons.min.css" %}">
     <!-- Theme style -->
     <link rel="stylesheet" href="{% static "dist/css/AdminLTE.min.css" %}">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
     folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static "dist/css/skins/_all-skins.min.css" %}">
     <link rel="stylesheet" href="{% static "plugins/bootstrap-slider/slider.css" %}">
+    <style type="text/css">
+        .skin-green-light .sidebar-menu>li:hover>a,.skin-green-light .sidebar-menu>li.active>a
+        {
+            color: #000;
+            background: #d0d0d0;
+        }
+        .skin-green-light .sidebar-menu>li>.treeview-menu {
+            color: #000;
+            background: #d0d0d0;
+        }
+        .menucss{
+               left: 0;
+                min-height: 100%;
+                padding-top: 50px;
+                position: absolute;
+                top: 0;
+                transition: transform 0.3s ease-in-out 0s, width 0.3s ease-in-out 0s;
+                width: 170px;
+                z-index: 810;
+        }
+        label.error {color: #cb0f1b;
+            font-size:12px;
+        }
+    </style>
     {% block mycss%}{% endblock %}
     <!-- jQuery 3.1.1 -->
     <script src="{% static "plugins/jQuery/jquery-3.1.1.min.js" %}"></script>
@@ -32,6 +59,7 @@
     <script src="{% static "dist/js/adminlte.min.js" %}"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="{% static "dist/js/demo.js" %}"></script>
+
 </head>
 <body class="hold-transition skin-green-light sidebar-mini">
 <div class="wrapper">
@@ -41,14 +69,16 @@
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini">启云</span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg">启创云课堂</span>
+            <img class="logo-lg" alt="" src="{% static "dist/img/logo_header.png" %}"/>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top">
             <!-- Sidebar toggle button-->
+            <!--
             <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
+            -->
             <!-- Navbar Right Menu -->
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
@@ -58,6 +88,19 @@
                     </li>
                     <li>
                         <a href="#"><b><!-- username --></b></a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b></b></a>
+                        <ul class="dropdown-menu" style=" min-width: 74px;text-align: center;vertical-align: middle;background-color:#00a65a;color:#fff;">
+                            <li>
+                                <!-- inner menu: contains the actual data -->
+                                <ul class="menu">
+                                    <li><!-- Task item -->
+                                    <a href="#"> <h3><b id="but_update" style="color:#fff ">修改密码</b></h3> </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="logout.action"><i class="fa fa-sign-out"></i> 注销</a>
@@ -75,10 +118,10 @@
             </div>
         </nav>
     </header>
-    <aside class="main-sidebar">
+    <aside class="main-sidebar menucss">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
-            <span style="display: none" id="menuData">${sessionScope.menuJsonStr}</span>
+            <span style="display: none" id="menuData">{{ menuJsonStr }}</span>
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" id="sidebarMenu">
                 <li class="header"></li>
@@ -92,7 +135,7 @@
         <div class="pull-right hidden-xs">
             <b>Version</b> 1.0
         </div>
-        <strong>Copyright &copy; <a href="#">primecloud.cn</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; <a href="#">启创卓越</a>.</strong> All rights reserved.
     </footer>
 </div>
 {% block myscript %}{% endblock %}
