添加log,session,自定义Middleware 支持

--- a/eclass/templates/index.html
+++ b/eclass/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "common/base.html" %}
-{%  block title %} {{ project_name }} {% endblock %}
+{%  block title %}首页 {% endblock %}
 {%  block mycss %}
     <!-- TODO 自定义部分 css-->
 {% endblock %}
