--- a/eclass/templates/common/base.html
+++ b/eclass/templates/common/base.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>{% block title %}{% endblock %}</title>
+    <title> {{ request.session.project_name }}|{% block title %}{% endblock %}</title>
     <link rel="SHORTCUT ICON" href="{% static "dist/img/favicon.ico" %}"/>
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="{% static "plugins/bootstrap/css/bootstrap.min.css" %}">
@@ -104,7 +104,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="logout.action"><i class="fa fa-sign-out"></i> 注销</a>
+                        <a href="{% url 'sysuser:logout' %}"><i class="fa fa-sign-out"></i> 注销</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-question-circle"></i></a>
@@ -122,7 +122,7 @@
     <aside class="main-sidebar menucss">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
-            <span style="display: none" id="menuData">{{ menuJsonStr }}</span>
+            <span style="display: none" id="menuData">{{ menu_json_str }}</span>
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" id="sidebarMenu">
                 <li class="header"></li>
