--- a/eclass/templates/login.html
+++ b/eclass/templates/login.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<title>{{ poject_name }} | 登录</title>
+<title>{{ request.session.project_name }} | 登录</title>
 <link rel="SHORTCUT ICON" href="{% static "dist/img/favicon.ico" %}"/>
  <!-- Bootstrap 3.3.7 -->
 <link rel="stylesheet" href="{% static "plugins/bootstrap/css/bootstrap.min.css" %}">
